openshift-examples/nodejs/nodejs-rt-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  generation: 1
  labels:
    app: openshift-nodejs-artifactory
  name: openshift-nodejs-artifactory
spec:
  replicas: 1
  selector:
    app: openshift-nodejs-artifactory
    deploymentconfig: openshift-nodejs-artifactory
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: openshift-nodejs-artifactory
        deploymentconfig: openshift-nodejs-artifactory
    spec:
      containers:
      - image: <RT_DOCKER_REPO>/node-version:latest
        imagePullPolicy: Always
        name: nodejs-rt
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: rt-docker-registry
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
