openshift-examples/nodejs/nodejs-rt-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openshift-nodejs-artifactory
  name: openshift-nodejs-artifactory
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deploymentconfig: openshift-nodejs-artifactory
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
