openshift-examples/nodejs/nodejs-rt-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: openshift-nodejs-artifactory
spec:
  port:
    targetPort: 3000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: openshift-nodejs-artifactory
    weight: 100
  wildcardPolicy: None
status: { }
